@@ -2,6 +2,7 @@ Revision history for HTML-Widget-Factory
 
 0.080     2010-05-03
           switch from Class::ISA to MRO::Compat
+          radio inputs now produce their content as label elements, not text
           fix "disabled" to be an attribute arg on input
 
 0.070     2009-06-30
